// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddReviewStarList component Should render according to the snapshot 1`] = `
<div>
  <input
    class="rating__input"
    id="star-1"
    name="rating"
    type="radio"
    value="1"
  />
  <label
    class="rating__label"
    for="star-1"
  >
    Rating 
    1
  </label>
  <input
    class="rating__input"
    id="star-2"
    name="rating"
    type="radio"
    value="2"
  />
  <label
    class="rating__label"
    for="star-2"
  >
    Rating 
    2
  </label>
  <input
    class="rating__input"
    id="star-3"
    name="rating"
    type="radio"
    value="3"
  />
  <label
    class="rating__label"
    for="star-3"
  >
    Rating 
    3
  </label>
  <input
    class="rating__input"
    id="star-4"
    name="rating"
    type="radio"
    value="4"
  />
  <label
    class="rating__label"
    for="star-4"
  >
    Rating 
    4
  </label>
  <input
    class="rating__input"
    id="star-5"
    name="rating"
    type="radio"
    value="5"
  />
  <label
    class="rating__label"
    for="star-5"
  >
    Rating 
    5
  </label>
  <input
    class="rating__input"
    id="star-6"
    name="rating"
    type="radio"
    value="6"
  />
  <label
    class="rating__label"
    for="star-6"
  >
    Rating 
    6
  </label>
  <input
    class="rating__input"
    id="star-7"
    name="rating"
    type="radio"
    value="7"
  />
  <label
    class="rating__label"
    for="star-7"
  >
    Rating 
    7
  </label>
  <input
    class="rating__input"
    id="star-8"
    name="rating"
    type="radio"
    value="8"
  />
  <label
    class="rating__label"
    for="star-8"
  >
    Rating 
    8
  </label>
  <input
    class="rating__input"
    id="star-9"
    name="rating"
    type="radio"
    value="9"
  />
  <label
    class="rating__label"
    for="star-9"
  >
    Rating 
    9
  </label>
  <input
    class="rating__input"
    id="star-10"
    name="rating"
    type="radio"
    value="10"
  />
  <label
    class="rating__label"
    for="star-10"
  >
    Rating 
    10
  </label>
</div>
`;

exports[`AddReviewStarList component Should render according to the snapshot when disabled 1`] = `
<div>
  <input
    class="rating__input"
    disabled=""
    id="star-1"
    name="rating"
    type="radio"
    value="1"
  />
  <label
    class="rating__label"
    for="star-1"
  >
    Rating 
    1
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-2"
    name="rating"
    type="radio"
    value="2"
  />
  <label
    class="rating__label"
    for="star-2"
  >
    Rating 
    2
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-3"
    name="rating"
    type="radio"
    value="3"
  />
  <label
    class="rating__label"
    for="star-3"
  >
    Rating 
    3
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-4"
    name="rating"
    type="radio"
    value="4"
  />
  <label
    class="rating__label"
    for="star-4"
  >
    Rating 
    4
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-5"
    name="rating"
    type="radio"
    value="5"
  />
  <label
    class="rating__label"
    for="star-5"
  >
    Rating 
    5
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-6"
    name="rating"
    type="radio"
    value="6"
  />
  <label
    class="rating__label"
    for="star-6"
  >
    Rating 
    6
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-7"
    name="rating"
    type="radio"
    value="7"
  />
  <label
    class="rating__label"
    for="star-7"
  >
    Rating 
    7
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-8"
    name="rating"
    type="radio"
    value="8"
  />
  <label
    class="rating__label"
    for="star-8"
  >
    Rating 
    8
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-9"
    name="rating"
    type="radio"
    value="9"
  />
  <label
    class="rating__label"
    for="star-9"
  >
    Rating 
    9
  </label>
  <input
    class="rating__input"
    disabled=""
    id="star-10"
    name="rating"
    type="radio"
    value="10"
  />
  <label
    class="rating__label"
    for="star-10"
  >
    Rating 
    10
  </label>
</div>
`;
